# Fastapi-Dependency_Injecter-project-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  robots.txt  tester.sh
app/: containers.py  main.py  requirements.txt
app/apis/v1/: bridge_routes.py
app/apis/v1/auth/: authentication.py  routes.py
app/apis/v1/auth/login/: containers.py  end_point.py
app/apis/v1/auth/login/repositories/: login_repositories.py
app/apis/v1/auth/login/service/: login_service.py
app/apis/v1/auth/logout/: end_point.py
app/apis/v1/auth/refresh_token/: containers.py  end_point.py
app/apis/v1/auth/refresh_token/repositories/: refresh_token_repositories.py
app/apis/v1/auth/registration/: containers.py  end_point.py
app/apis/v1/background/: routes.py
app/apis/v1/background/news_crawling/: end_point.py
app/apis/v1/news/: routes.py
app/apis/v1/news/detail/: end_point.py
app/apis/v1/news/list/: containers.py  end_point.py  sqlalchemy_helper.py
app/background/: container.py  run.py  worker.py
app/background/job/: news_crawling.py
app/celery_task/: container.py  run.py  worker.py
app/celery_task/job/: news_crawling.py
app/common/: config.py  main_config.json
app/database/: base.py  conn.py  redis_config.py  redis_manger.py
app/database/schema/: global_config.py  news.py  news_articles.py  user.py
app/errors/: exceptions.py
app/middlewares/: base_middleware.py  dispatch.py
app/models/: news.py  response.py  user.py
app/query/: global_config.yaml  login.yaml  news.yaml  registration.yaml
app/test/: conftest.py  pytest.ini  test.db  test_auth.py
app/tests/: conftest.py  pytest.ini  test_auth.py  test_auth.py_async_version  test_news.py
app/util/: config_decrypt.py  date_utils.py  jinja_sql.py  logger.py  token.py
gunicorn/: gunicorn_conf.py
migrations/: env.py
migrations/versions/: 682bc7e13c77_news_articles_table.py  be5f0acdce0a_user_info_table.py
nginx/: nginx.conf
script/: tester.sh
scripts/: start.sh
(+7 files in other folders)
